# postgres_mcp_server_client

./: .gitignore  Dockerfile  README.md  call_timer.py  config.ini  docker-compose.yml  llama_model_manager.py  main.py  pyproject.toml  server.py
api/: client.py  routers.py
db/: connector.py  validator.py
models/: query_models.py
routers/: sql_query_router.py
services/: bootstrap.py  database_config.py  database_handler.py  database_schema_service.py  postgres_mcp_server.py  sql_query_service.py
src/: config.py  operation_timer.py
